Speed up constructors of nsAutoString and nsCAutoString by calling nsStrPrivate::Initialize only once.  b=188828  r=darin  sr=alecf