xpcom/string/obsolete/nsString.h
@@ -79,6 +79,14 @@ public:
    */
   nsCString();
 
+protected:
+  /**
+   * Constructor for the use of derived classes.
+   */
+  inline nsCString(char* aCString, PRUint32 aCapacity, PRUint32 aLength,
+                   eCharSize aCharSize, PRBool aOwnsBuffer);
+
+public:
   /**
    * This is our copy constructor 
    * @param   reference to another nsCString
